force-app/main/default/objects/loan__Loan_Transaction_Summary__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <formula>IF(ISBLANK(loan__Interest_Posting_Txn__c) == FALSE,loan__Transaction_Amount__c,IF(ISBLANK(loan__Loan_Charge__c) == FALSE,loan__Transaction_Amount__c,IF(ISBLANK(loan__Loan_Disbursal__c) == FALSE,loan__Transaction_Amount__c,IF(loan__Repayment_Txn_Reversal__r.loan__Payment_Type__c=&apos;Waived&apos;,loan__Transaction_Amount__c,IF(loan__Repayment_Txn_Reversal__r.loan__Payment_Type__c=&apos;Regular&apos;,loan__Transaction_Amount__c,IF(ISBLANK(loan__Loan_Due_Detail__c) == FALSE,loan__Transaction_Amount__c,IF( loan__Last_Transaction_Type__c==&apos;Deposit Adjustment - Subtract&apos;,loan__Transaction_Amount__c,null)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>