force-app/main/default/objects/loan__Loan_Transaction_Summary__c/fields/Paid_Off_Check__c.field-meta.xml
<CustomField>
    <fullName>Paid_Off_Check__c</fullName>
    <formula>IF(!ISBLANK(loan__Loan_Account__r.loan__Closed_Date__c)  &amp;&amp;   loan__Transaction_Date__c  &gt; loan__Loan_Account__r.loan__Closed_Date__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Off Check</label>
    <type>Checkbox</type>
</CustomField>